--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,73 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<!doctype html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Sortir.com{% endblock %}</title>
+    {#<link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.min.css') }}">#}
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    {#<link href="{{ asset('open-iconic/font/css/open-iconic.css') }}" rel="stylesheet">#}
+    <link rel="icon" href="{{ asset('img/S.png') }}">
+    {#<script src="{{ asset("js/jquery.min.js") }}"></script>
+    <script src="{{ asset('js/popper.js') }}"></script>
+    <script src="{{ asset('js/tooltip.js') }}"></script>
+    <script src="{{ asset("bootstrap/js/bootstrap.min.js") }}"></script>#}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+</head>
+<body>
+<div class="container">
+    <header>
+        <a class="site-title" href="{{ path('main_home') }}" title="Sortir.com | Accueil">
+            <img src="{{ asset('img/S.png') }}" alt="Sortir.com logo">ortir.com
+        </a>
+        <nav>
+            <ul>
+                <li><a href="{{ path("main_home") }}" title="Sortir.com | Accueil">Accueil</a></li>
+                {#<li><a href="{{ path("idea_list") }}" title="Latest ideas">Latest ideas</a></li>
+                {% if is_granted("ROLE_USER") %}
+                    <li><a href="{{ path("idea_add") }}" title="Add your ideas!">Add your ideas!</a></li>
+                {% endif %}
+                {% if is_granted("ROLE_ADMIN") %}
+                    <li><a href="{{ path("category_list") }}" title="Latest categorys">Latest categorys</a></li>
+                {% endif %}
+                <li><a href="{{ path("main_about_us") }}" title="Latest ideas">About us</a></li>#}
+            </ul>
+           {# <ul>
+                {% if is_granted("ROLE_USER") or is_granted("ROLE_ADMIN")  %}
+                    <li><a href="#" disabled>Hi {{ app.user.username }}!</a></li>
+                    <li><a href="{{ path("logout") }}" title="Logout">Logout</a></li>
+                {% else %}
+                    <li><a href="{{ path("register") }}" title="Register">Register</a></li>
+                    <li><a href="{{ path("login") }}" title="Login">Login</a></li>
+                {% endif %}
+            </ul>#}
+        </nav>
+    </header>
+
+    <main>
+        <div class="flashes">
+            {% for label, messages in app.flashes %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ label }} alert-dismissible fade show"  role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endfor %}
+            {% endfor %}
+        </div>
+
+        {% block main %}{% endblock %}
+
+    </main>
+
+    <footer>
+        © {{ "now"|date("Y") }} Sortir.com
+    </footer>
+    {% block javascript %}{% endblock %}
+</div>
+</body>
 </html>
