--- a/templates/main/monProfil.html.twig
+++ b/templates/main/monProfil.html.twig
@@ -9,6 +9,8 @@
         {{ form_row(participantForm.telephone) }}
         {{ form_row(participantForm.mail) }}
         {{ form_row(participantForm.mot_de_passe) }}
+        {{ form_row(participantForm.confirmation) }}
+        {{ form_row(participantForm.campus) }}
 
         <button type="submit"> Valider </button>
         <button type="reset"> Annuler </button>
