Attention à la mousse

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,6 +44,9 @@
                 {% else %}
                     {#<li><a href="{{ path("register") }}" title="Créer compte">Register</a></li>#}
                     <li><a href="{{ path("login") }}" title="Connexion">Connexion</a></li>
+
+                    <li><a href="{{ path("register") }}" title="Créer compte">Créer un compte</a></li>
+
                 {% endif %}
             </ul>
         </nav>
