--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
 <div class="container">
     <header>
         <a class="site-title" href="{{ path('main_home') }}" title="Sortir.com | Accueil">
-            <img src="{{ asset('img/logo.png') }}" alt="Sortir.com logo">
+            <img src="{{ asset('img/S.png') }}" alt="Sortir.com logo">ortir.com
         </a>
         <nav>
             <ul>
