--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,12 @@
             <img src="{{ asset('img/logo.png') }}" alt="Sortir.com logo">
         </a>
         <nav>
+            {% if is_granted("ROLE_USER") %}
+                ZIZI
+            {% endif %}
+            {% if is_granted("ROLE_ADMIN") %}
+                UIUI
+            {% endif %}
             <ul>
                 <li><a href="{{ path("main_home") }}" title="Sortir.com | Accueil">Accueil</a></li>
                 {#<li><a href="{{ path("monProfil") }}" title="Profil">Mon Profil</a></li>#}
@@ -39,7 +45,7 @@
             </ul>
             <ul>
                 {% if is_granted("ROLE_USER") or is_granted("ROLE_ADMIN")  %}
-                    <li><a href="#" disabled>Bonjour {{ app.participant.prenom }}!</a></li>
+                    <li><a href="#" disabled>Bonjour {{ app.user.prenom }}!</a></li>
                     <li><a href="{{ path("logout") }}" title="Deconnexion">D&eacute;connexion</a></li>
                 {% else %}
                     {#<li><a href="{{ path("register") }}" title="Créer compte">Register</a></li>#}
