--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
     <script src="{{ asset("bootstrap/js/bootstrap.min.js") }}"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
@@ -68,7 +69,25 @@
     <footer>
         © {{ "now"|date("Y") }} Sortir.com
     </footer>
-    {% block javascript %}{% endblock %}
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
+<script type="text/javascript">
+    $(function() {
+        $('.js-datepicker').datetimepicker({
+            locale: "fr",
+            sideBySide: true,
+            icons:
+                {
+                    up: 'fa fa-angle-up',
+                    down: 'fa fa-angle-down',
+                    previous: 'fas fa-angle-left',
+                    next: 'fas fa-angle-right'
+                }
+
+        });
+    });
+</script>
 </body>
 </html>
