--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -2,11 +2,28 @@
 
 {% block main %}
     <h1>{{  sortie.nom }}</h1>
+    <div class="detail-sortie">
+        <div>nom de la sortie : {{ sortie.nom }}</div>
+        <div>date et heure de la sortie : {{ sortie.dateDebut | date('Y-m-d') }}</div>
+        <div>date limite d'inscription : {{ sortie.dateCloture | date('Y-m-d') }}</div>
+        <div>nombre de places : {{ sortie.nbInscriptionMax }}</div>
+        <div>durée : {{ sortie.duree }}</div>
+        <div>description et infos : {{ sortie.infosSortie }}</div>
+
+        <div>campus : {{ sortie.campus.nom }}</div>
+        <div>lieu : {{ sortie.lieu.nom }}</div>
+        <div>Rue : {{ sortie.lieu.rue }}</div>
+        <div>Code postal : {{ sortie.lieu.ville.codePostal }}</div>
+        <div>latitude : {{ sortie.lieu.latitude }}</div>
+        <div>longitude : {{ sortie.lieu.longitude }}</div>
+
+    </div>
 
     <div class="sortie-list">
         <ul>
+            <div>Liste des participants inscrits</div>
             {% for participant in participants %}
-                <li>{{ participant.prenom }}</li>
+                <li><a href="{{ path("profile", {'id':participant.id} ) }}">{{ participant.prenom }}</a></li>
             {% endfor %}
         </ul>
     </div>
