profile des inscrits

--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -5,4 +5,5 @@
     <div>téléphone : {{ profile.telephone }}</div>
     <div>e-mail : {{ profile.mail }}</div>
     <div>campus : {{ profile.campus.nom }}</div>
+    <input type="button" value="Retour" onclick="history.back()">
 {% endblock %}
