--- a/templates/sortie/liste.html.twig
+++ b/templates/sortie/liste.html.twig
@@ -1,13 +1,40 @@
 {% extends 'base.html.twig' %}
 
 {% block main %}
-    <h1>Hola</h1>
+    <h3>Filtrer les sorties</h3>
 
-    <div class="sortie-list">
-        <ul>
+    <div >
+        <table class="table table-bordered table-condensed table-body-center" >
+            <thead>
+            <tr>
+                <th>Nom de la sortie</th>
+                <th>Date de la sortie</th>
+                <th>Clôture</th>
+                <th>Inscrits/Places</th>
+                <th>&Eacute;tat</th>
+                <th>Inscrit</th>
+                <th>Organisateur</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
             {% for sortie in sorties %}
-                <li>{{ sortie.nom }}</li>
+                <tr>
+                    <td>{{sortie.nom}}</td>
+                    <td>{{sortie.dateDebut | date('d/m/Y H:i')}}</td>
+                    <td>{{sortie.dateCloture | date('d/m/Y H:i')}}</td>
+                    <td>{{sortie.participantsP | length}}/{{sortie.nbInscriptionMax}}</td>
+                    <td>{{sortie.etat.libelle}}</td>
+                    {% if sortie in isInscrit | keys %}
+                        <td>X</td>
+                    {% else %}
+                        <td> </td>
+                    {% endif %}
+                    <td>{{sortie.nom}}</td>
+                    <td>{{sortie.nom}}</td>
+                </tr>
             {% endfor %}
-        </ul>
+            </tbody>
+        </table>
     </div>
 {% endblock %}
