--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -7,27 +7,29 @@
 {% endblock %}
 
 {% block main %}
-    <h1>Login</h1>
+    <h1 class="login">Login</h1>
 
-    <form action="{{ path('login') }}" method="post">
-        <div>
-            <label for="username">Adresse mail :</label>
-            <input type="text" id="username" name="_username" value="{{ last_username }}" />
+    <form action="{{ path('login') }}" method="post" id="login">
+        <div class="form-group row" style="margin: auto">
+            <label for="username" class="col-form-label col-sm-2 required">Adresse mail :</label>
+            <div class="col-sm-10"><input type="text" id="username" name="_username" class="form-control" value="{{ last_username }}" /></div>
         </div>
-        <div>
-            <label for="password">Mot de passe :</label>
-            <input type="password" id="password" name="_password" />
-        </div>
-        <div>
-            <input type="checkbox" id="remember_me" name="_remember_me" checked/>
-            <label for="remember_me" class="form-check-inline">Se souvenir de moi</label>
+        <div class="form-group row" style="margin: auto">
+            <label for="password" class="col-form-label col-sm-2 required">Mot de passe :</label>
+            <div class="col-sm-10"><input type="password" id="password" class="form-control" name="_password" /></div>
         </div>
 
         {% if error %}
             <div><ul><li>{{ error.messageKey|trans(error.messageData, 'security') }}</li></ul></div>
         {% endif %}
 
-        <button type="submit">Valider</button>
+        <div class="form-button">
+            <button type="submit" class="btn btn-primary">Valider</button>
+            <div>
+                <input type="checkbox" id="remember_me" name="_remember_me" checked/>
+                <label for="remember_me" class="form-check-inline">Se souvenir de moi</label>
+            </div>
+        </div>
     </form>
 {% endblock %}
 
