--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -27,4 +27,6 @@
             {% endfor %}
         </ul>
     </div>
+
+    <a href="{{ path("inscription_sortie", {'id' : id}) }}">S'inscrir</a>
 {% endblock %}
