--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -5,5 +5,5 @@
     <div>téléphone : {{ profile.telephone }}</div>
     <div>e-mail : {{ profile.mail }}</div>
     <div>campus : {{ profile.campus.nom }}</div>
-    <input type="button" value="Retour" onclick="history.back()">
+    <input class="btn btn-primary" type="button" value="Retour" onclick="history.back()">
 {% endblock %}
