--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -28,7 +28,7 @@
         </ul>
     </div>
     {% if app.user in sortie.participantsP  and sortie.dateDebut > "now"|date("Y/m/d")%}
-        <a href="{{ path("sortie_deinscription", {'id' : id}) }}">Se déinscrire</a>
+        <a href="{{ path("sortie_desinscription", {'id' : id}) }}">Se désinscrire</a>
     {% elseif app.user not in  sortie.participantsP and sortie.dateCloture > "now"|date("Y/m/d") and sortie.etat.libelle == "Ouverte"%}
         <a href="{{ path("sortie_inscription", {'id' : id}) }}">S'inscrire</a>
     {% endif %}
