--- a/templates/sortie/liste.html.twig
+++ b/templates/sortie/liste.html.twig
@@ -2,50 +2,59 @@
 
 {% block main %}
 
-    <div class="jumbotron jumbotron-fluid bg-transparent">
+    <div class="jumbotron jumbotron-fluid bg-transparent" style="margin-top: -50px; border-bottom: 1px solid #D3D3D3; padding-bottom: 0px;">
         <div class="container">
             <h1 class="display-7">Filtrer les sorties</h1>
 
             <form method="post" action="{{ path('sortie_filtre') }}">
                 <div class="row">
                     <div class="col-sm-6">
-                        <label for="listeCampus">Site : </label>
-                        <select class="browser-default custom-select" id="listeCampus">
+                        <label for="listeCampus">Site</label>
+                        <select class="browser-default custom-select" id="listeCampus" name="campus">
                             {% for unCampus in campus %}
                                 <option value="{{ unCampus.id }}">{{ unCampus.nom }}</option>
                             {% endfor %}
                         </select>
 
-                        <label for="searchInput">Le nom de la sortie contient : </label>
+                        <label for="searchInput">Le nom de la sortie contient</label>
                         <input id="searchInput" class="form-control" type="text" placeholder="Rechercher" name ="search">
 
-                        <div>
-                            <label for="dateDebut">Entre </label>
-                            <input id="dateDebut" type="text" class="js-datepicker form-control">
-
-                            <label for="dateFin"> Et </label>
-                            <input id="dateFin" type="text" class="js-datepicker form-control">
+                        <div class="flex-sm-row">
+                            <label for="dateDebut">Entre le</label>
+                            <input id="dateDebut" name="dateDebut" type="text" class="js-datepicker form-control" value="{{dateDuJour | date('d/m/Y H:i')}}">
+                            <label for="dateFin">Et le</label>
+                            <input id="dateFin" name="dateFin" type="text" class="js-datepicker form-control" value="{{dateDuJour1 | date('d/m/Y H:i')}}">
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="flex-row">
-                            <input type="checkbox" id="organisateur" name="organisateur" checked/>
-                            <label for="organisateur" class="form-check-inline">Sorties dont je suis l'oganisateur/trice</label>
-                        </div>
-                        <div class="flex-row">
-                            <input type="checkbox" id="inscrit" name="inscrit" checked/>
-                            <label for="inscrit" class="form-check-inline">Sorties auxquelles je suis inscrit/e</label>
-                        </div>
-                        <div class="flex-row">
-                            <input type="checkbox" id="nonInscrit" name="nonInscrit" checked/>
-                            <label for="nonInscrit" class="form-check-inline">Sorties auxquelles je ne suis pas inscrit/e</label>
-                        </div>
-                        <div class="flex-row">
-                            <input type="checkbox" id="passee" name="passee" checked/>
-                            <label for="passee" class="form-check-inline">Sorties pass&eacute;es</label>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="organisateur" name="organisateur"/>
+                                <label for="organisateur" class="custom-control-label">Sorties dont je suis l'oganisateur/trice</label>
+                            </div>
                         </div>
                         <div class="flex-row">&nbsp;</div>
+                        <div class="flex-row">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="inscrit" name="inscrit"/>
+                                <label for="inscrit" class="custom-control-label">Sorties auxquelles je suis inscrit/e</label>
+                            </div>
+                        </div>
                         <div class="flex-row">&nbsp;</div>
+                        <div class="flex-row">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="nonInscrit" name="nonInscrit"/>
+                                <label for="nonInscrit" class="custom-control-label">Sorties auxquelles je ne suis pas inscrit/e</label>
+                            </div>
+                        </div>
+                        <div class="flex-row">&nbsp;</div>
+                        <div class="flex-row">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="passee" name="passee"/>
+                                <label for="passee" class="custom-control-label">Sorties pass&eacute;es</label>
+                            </div>
+                        </div>
+
                         <div class="flex-row">&nbsp;</div>
                         <button type="submit" class="btn btn-outline-primary btn-lg">Rechercher</button>
                     </div>
@@ -85,19 +94,24 @@
                     <td>
                         <u><a href="{{ path("sortie_detail", {'id':sortie.id}) }}">Afficher</a></u>
                         {% if  app.user in sortie.participantsP %}
-                            <u><a href="{{ path("", {'id':sortie.id}) }}"> - Se d&eacute;sister</a></u>
+                            {#<u><a href="{{ path("", {'id':sortie.id}) }}"> - Se d&eacute;sister</a></u>#}
+                            <u>- Se d&eacute;sister</u>
                         {% endif %}
                         {% if app.user not in sortie.participantsP %}
-                            <u><a href="{{ path("sortie_inscription_sortie", {'id':sortie.id}) }}"> - S'inscrire</a></u>
+                            {#<u><a href="{{ path("sortie_inscription_sortie", {'id':sortie.id}) }}"> - S'inscrire</a></u>#}
+                            <u>- S'inscrire</u>
                         {% endif %}
                         {% if app.user in sortie.participantO and sortie.etat.equals("Ouverte") %}
-                            <u><a href="{{ path("", {'id':sortie.id}) }}">Modifier</a></u>
+                            {#<u><a href="{{ path("", {'id':sortie.id}) }}">Modifier</a></u>#}
+                            <u>- Modifier</u>
                         {% endif %}
-                        {% if app.user in sortie.participantO %}
-                            <u><a href="{{ path("", {'id':sortie.id}) }}"> - Publier</a></u>
+                        {% if app.user in sortie.participantO and sortie.etat.equals("Créée") %}
+                            {#<u><a href="{{ path("", {'id':sortie.id}) }}"> - Publier</a></u>#}
+                            <u>- Publier</u>
                         {% endif %}
-                        {% if app.user in sortie.participantO %}
-                            <u><a href="{{ path("", {'id':sortie.id}) }}"> - Annuler</a></u>
+                        {% if app.user in sortie.participantO and sortie.etat.equals("Ouverte") %}
+                            {#<u><a href="{{ path("", {'id':sortie.id}) }}"> - Annuler</a></u>#}
+                            <u>- Annuler</u>
                         {% endif %}
                     </td>
                 </tr>
