--- a/templates/sortie/liste.html.twig
+++ b/templates/sortie/liste.html.twig
@@ -102,16 +102,13 @@
                             {% if app.user not in sortie.participantsP and sortie.etat.libelle == "Ouverte"%}
                                 <u><a href="{{ path("sortie_inscription", {'id':sortie.id}) }}"> - S'inscrire</a></u>
                             {% endif %}
-                            {% if app.user in sortie.participantO and sortie.etat.libelle == "Ouverte" %}
+                            {% if app.user == sortie.participantO and ( sortie.etat.libelle == "Ouverte" or sortie.etat.libelle == "Créée") and sortie.dateDebut > "now"|date("Y/m/d") %}
                                 {#<u><a href="{{ path("", {'id':sortie.id}) }}">Modifier</a></u>#}
                                 <u>- Modifier</u>
+                                <u><a href="{{ path("sortie_annuler", {'id':sortie.id}) }}"> - Annuler</a></u>
                             {% endif %}
                             {% if app.user == sortie.participantO and sortie.etat.libelle == "Créée" %}
                                 <u><a href="{{ path("sortie_publication", {'id':sortie.id}) }}"> - Publier</a></u>
-                            {% endif %}
-                            {% if app.user in sortie.participantO and sortie.etat.libelle == "Ouverte" %}
-                                {#<u><a href="{{ path("", {'id':sortie.id}) }}"> - Annuler</a></u>#}
-                                <u>- Annuler</u>
                             {% endif %}
                         </td>
                     </tr>
