--- a/templates/sortie/liste.html.twig
+++ b/templates/sortie/liste.html.twig
@@ -86,7 +86,13 @@
                         <td>{{sortie.nom}}</td>
                         <td>{{sortie.dateDebut | date('d/m/Y H:i')}}</td>
                         <td>{{sortie.dateCloture | date('d/m/Y H:i')}}</td>
-                        <td>{{sortie.participantsP | length}}/{{sortie.nbInscriptionMax}}</td>
+                        <td>
+                            {% if sortie.etat.libelle != "Annulée" %}
+                                {{sortie.participantsP | length}}/{{sortie.nbInscriptionMax}}
+                            {% else %}
+                                 -/-
+                            {% endif %}
+                        </td>
                         <td>{{sortie.etat.libelle}}</td>
                         {% if sortie in isInscrit %}
                             <td>X</td>
@@ -105,7 +111,7 @@
                             {% if app.user == sortie.participantO and ( sortie.etat.libelle == "Ouverte" or sortie.etat.libelle == "Créée") and sortie.dateDebut > "now"|date("Y/m/d") %}
                                 {#<u><a href="{{ path("", {'id':sortie.id}) }}">Modifier</a></u>#}
                                 <u>- Modifier</u>
-                                <u><a href="{{ path("sortie_annuler", {'id':sortie.id}) }}"> - Annuler</a></u>
+                                <u><a href="{{ path("sortie_annuler", {'id':sortie.id}) }}" > - Annuler</a></u>
                             {% endif %}
                             {% if app.user == sortie.participantO and sortie.etat.libelle == "Créée" %}
                                 <u><a href="{{ path("sortie_publication", {'id':sortie.id}) }}"> - Publier</a></u>
