--- a/templates/sortie/liste.html.twig
+++ b/templates/sortie/liste.html.twig
@@ -95,11 +95,11 @@
                         </td>
                         <td>{{sortie.etat.libelle}}</td>
                         {% if sortie in isInscrit %}
-                            <td>X</td>
+                            <td style="text-align: center">X</td>
                         {% else %}
                             <td> </td>
                         {% endif %}
-                        <td><u><a href="{{ path("profil", {'id':sortie.ParticipantO.id} ) }}">{{sortie.ParticipantO.nom}}</a></u></td>
+                        <td><u><a href="{{ path("profil", {'id':sortie.ParticipantO.id} ) }}">{{sortie.ParticipantO.prenom}} {{sortie.ParticipantO.nom}}</a></u></td>
                         <td>
                             <u><a href="{{ path("sortie_detail", {'id':sortie.id}) }}">Afficher</a></u>
                             {% if  app.user in sortie.participantsP and sortie.etat.libelle == "Ouverte"%}
