--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -66,29 +66,29 @@
         </div>
     </div>
 
-    <div class="sortie-participant">
-        <div>Liste des participants inscrits :</div>
-        <ul>
-            {% for participant in participants %}
-                <a href="{{ path("profil", {'id':participant.id} ) }}"><li>{{ participant.prenom }} {{ participant.nom | upper }}</li></a>
-            {% endfor %}
-        </ul>
-    </div>
-    <div class="btn-command">
-    {% if app.user in sortie.participantsP  and sortie.dateDebut > "now"|date("Y/m/d")%}
-        <a href="{{ path("sortie_desinscription", {'id' : id}) }}"><button class="btn btn-secondary">Se désinscrire</button></a>
-    {% elseif app.user not in  sortie.participantsP and sortie.dateCloture > "now"|date("Y/m/d") and sortie.etat.libelle == "Ouverte"%}
-        <a href="{{ path("sortie_inscription", {'id' : id}) }}"><button class="btn btn-primary">S'inscrire</button></a>
-    {% endif %}
-        {% if app.user == sortie.participantO and sortie.dateDebut > "now"|date("Y/m/d") and sortie.etat.libelle == "Créée" %}
-            <a href="{{ path("sortie_publication", {'id' : id}) }}"><button class="btn btn-primary">Publier la sortie</button></a>
-        {% endif %}
+    <div style="display: flex; justify-content: space-between; margin-top: 10px">
+        <div class="sortie-participant">
+            <label> Liste des participants inscrits :  </label>
+            <ul>
+                {% for participant in participants %}
+                    <a href="{{ path("profil", {'id':participant.id} ) }}"><li>{{ participant.prenom }} {{ participant.nom | upper }}</li></a>
+                {% endfor %}
+            </ul>
+        </div>
+        <div class="btn-command">
+            {% if app.user in sortie.participantsP  and sortie.dateDebut > "now"|date("Y/m/d")%}
+                <a href="{{ path("sortie_desinscription", {'id' : id}) }}"><button class="btn btn-secondary">Se désinscrire</button></a>
+            {% elseif app.user not in  sortie.participantsP and sortie.dateCloture > "now"|date("Y/m/d") and sortie.etat.libelle == "Ouverte"%}
+                <a href="{{ path("sortie_inscription", {'id' : id}) }}"><button class="btn btn-primary">S'inscrire</button></a>
+            {% endif %}
+            {% if app.user == sortie.participantO and sortie.dateDebut > "now"|date("Y/m/d") and sortie.etat.libelle == "Créée" %}
+                <a href="{{ path("sortie_publication", {'id' : id}) }}"><button class="btn btn-primary">Publier la sortie</button></a>
+            {% endif %}
 
-        {% if app.user == sortie.participantO and ( sortie.etat.libelle == "Ouverte" or sortie.etat.libelle == "Créée") and sortie.dateDebut > "now"|date("Y/m/d") %}
-            <a href="{{ path("sortie_modifier", {'id':sortie.id}) }}"><button class="btn btn-primary">Modifier</button></a>
-            <a href="{{ path("sortie_annuler", {'id':sortie.id}) }}" ><button class="btn btn-secondary">Annuler</button></a>
-        {% endif %}
-
-
+            {% if app.user == sortie.participantO and ( sortie.etat.libelle == "Ouverte" or sortie.etat.libelle == "Créée") and sortie.dateDebut > "now"|date("Y/m/d") %}
+                <a href="{{ path("sortie_modifier", {'id':sortie.id}) }}"><button class="btn btn-primary">Modifier</button></a>
+                <a href="{{ path("sortie_annuler", {'id':sortie.id}) }}" ><button class="btn btn-secondary">Annuler</button></a>
+            {% endif %}
+        </div>
     </div>
 {% endblock %}
