--- a/templates/main/monProfil.html.twig
+++ b/templates/main/monProfil.html.twig
@@ -7,7 +7,7 @@
 
         <div class="form-button">
             <button type="submit" class="btn btn-primary">Valider</button>
-            <button type="reset" class="btn btn-secondary">Effacer</button>
+            <button type="reset" class="btn btn-secondary">Annuler</button>
         </div>
 
         {{ form_end (participantForm) }}
